--- a/EventGuru02/Fahad/Fahad-HomePage.storyboard
+++ b/EventGuru02/Fahad/Fahad-HomePage.storyboard
@@ -36,6 +36,10 @@
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LDn-ux-ooQ">
                                                     <rect key="frame" x="20" y="8" width="192" height="129"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="129" id="fFo-SS-s0Z"/>
+                                                        <constraint firstAttribute="width" constant="192" id="mYf-OU-Pma"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tl3-0k-Laq">
                                                     <rect key="frame" x="281" y="86" width="41.333333333333314" height="21"/>
