--- a/EventGuru02/Fahad/Fahad-Event Posting.storyboard
+++ b/EventGuru02/Fahad/Fahad-Event Posting.storyboard
@@ -88,10 +88,15 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="Add Thumbnail"/>
                                 <connections>
-                                    <action selector="selectPhoto:" destination="TaN-va-PD1" eventType="touchUpInside" id="04r-lX-7n3"/>
                                     <action selector="selectPhotoTapped:" destination="TaN-va-PD1" eventType="touchUpInside" id="NVM-99-Sto"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jIB-T3-IPR">
+                                <rect key="frame" x="154" y="582" width="224" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g65-WG-0eI">
                                 <rect key="frame" x="15" y="589" width="75" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -106,9 +111,12 @@
                                     <action selector="createEventBtn:" destination="TaN-va-PD1" eventType="touchUpInside" id="gI3-br-EPS"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GRU-vd-tHy">
-                                <rect key="frame" x="17" y="61" width="360" height="178"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Whg-ZT-HkZ">
+                                <rect key="frame" x="15" y="55" width="363" height="194"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="194" id="HJP-km-cU0"/>
+                                    <constraint firstAttribute="width" constant="363" id="NgD-7J-hcS"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="e87-W9-ebQ"/>
@@ -116,8 +124,10 @@
                         <constraints>
                             <constraint firstItem="e87-W9-ebQ" firstAttribute="trailing" secondItem="0Ku-zl-wd7" secondAttribute="trailing" constant="34" id="1O5-7Y-Qti"/>
                             <constraint firstItem="0Ku-zl-wd7" firstAttribute="leading" secondItem="MQS-CD-x0S" secondAttribute="trailing" constant="75" id="4Yg-Nf-MET"/>
+                            <constraint firstItem="i6R-1G-RRp" firstAttribute="top" secondItem="Whg-ZT-HkZ" secondAttribute="bottom" constant="20" id="4k8-4Q-vDt"/>
                             <constraint firstItem="L7F-KW-pvn" firstAttribute="top" secondItem="rjD-1L-GVY" secondAttribute="bottom" constant="21" id="6Gr-tq-TTa"/>
                             <constraint firstItem="e87-W9-ebQ" firstAttribute="trailing" secondItem="i6R-1G-RRp" secondAttribute="trailing" constant="16" id="6vc-ky-WXN"/>
+                            <constraint firstItem="Whg-ZT-HkZ" firstAttribute="top" secondItem="BD8-tx-ubh" secondAttribute="top" constant="55" id="9F1-IV-48l"/>
                             <constraint firstItem="1by-WY-cZp" firstAttribute="top" secondItem="L7F-KW-pvn" secondAttribute="bottom" constant="116" id="DtX-r1-K7I"/>
                             <constraint firstItem="L7F-KW-pvn" firstAttribute="leading" secondItem="e87-W9-ebQ" secondAttribute="leading" constant="16" id="FV6-ih-9pi"/>
                             <constraint firstItem="H4Q-rn-d73" firstAttribute="top" secondItem="vGb-64-eO7" secondAttribute="bottom" constant="8" id="GEK-aW-OYH"/>
@@ -135,6 +145,7 @@
                             <constraint firstItem="0Ku-zl-wd7" firstAttribute="top" secondItem="r7p-WQ-sX3" secondAttribute="bottom" constant="75" id="WLi-If-d1P"/>
                             <constraint firstItem="Y3r-ba-Vw5" firstAttribute="top" secondItem="MQS-CD-x0S" secondAttribute="bottom" constant="32" id="WgP-eL-xIl"/>
                             <constraint firstItem="H4Q-rn-d73" firstAttribute="leading" secondItem="1by-WY-cZp" secondAttribute="trailing" constant="93" id="Xwf-l5-taE"/>
+                            <constraint firstItem="e87-W9-ebQ" firstAttribute="trailing" secondItem="Whg-ZT-HkZ" secondAttribute="trailing" constant="15" id="Yte-jT-fqR"/>
                             <constraint firstItem="e87-W9-ebQ" firstAttribute="trailing" secondItem="vGb-64-eO7" secondAttribute="trailing" constant="16" id="Z4R-Xk-L2y"/>
                             <constraint firstItem="0r9-nE-R2t" firstAttribute="top" secondItem="Lsg-qe-p0a" secondAttribute="bottom" constant="40" id="Zm8-Qn-BPh"/>
                             <constraint firstItem="r7p-WQ-sX3" firstAttribute="top" secondItem="H4Q-rn-d73" secondAttribute="bottom" constant="8" symbolic="YES" id="aH6-A4-UzM"/>
@@ -150,6 +161,7 @@
                             <constraint firstItem="Lsg-qe-p0a" firstAttribute="top" secondItem="0Ku-zl-wd7" secondAttribute="bottom" constant="15" id="k3P-XQ-8zF"/>
                             <constraint firstItem="MQS-CD-x0S" firstAttribute="leading" secondItem="e87-W9-ebQ" secondAttribute="leading" constant="17" id="kzq-9B-dIW"/>
                             <constraint firstItem="e87-W9-ebQ" firstAttribute="trailing" secondItem="0r9-nE-R2t" secondAttribute="trailing" constant="136" id="mdQ-Ip-2og"/>
+                            <constraint firstItem="Whg-ZT-HkZ" firstAttribute="leading" secondItem="e87-W9-ebQ" secondAttribute="leading" constant="15" id="o99-ho-wgv"/>
                             <constraint firstItem="MQS-CD-x0S" firstAttribute="top" secondItem="g65-WG-0eI" secondAttribute="bottom" constant="41" id="r3W-7b-MLh"/>
                             <constraint firstItem="vGb-64-eO7" firstAttribute="top" secondItem="5Ll-bs-BHC" secondAttribute="bottom" constant="15" id="tgJ-eu-BJd"/>
                             <constraint firstItem="Lsg-qe-p0a" firstAttribute="top" secondItem="0Ku-zl-wd7" secondAttribute="bottom" constant="15" id="u4r-ek-TJb"/>
@@ -163,10 +175,11 @@
                     </view>
                     <navigationItem key="navigationItem" id="zng-qa-Ias"/>
                     <connections>
+                        <outlet property="Category" destination="jIB-T3-IPR" id="aen-LB-Dow"/>
                         <outlet property="Description" destination="vGb-64-eO7" id="bjt-rT-3c9"/>
                         <outlet property="endDatePicker" destination="Lsg-qe-p0a" id="oHF-oR-lds"/>
                         <outlet property="eventName" destination="5Ll-bs-BHC" id="kod-GV-8vA"/>
-                        <outlet property="imageView" destination="GRU-vd-tHy" id="gon-Qf-lRf"/>
+                        <outlet property="imageView" destination="Whg-ZT-HkZ" id="qAg-a4-16R"/>
                         <outlet property="location" destination="r7p-WQ-sX3" id="OzZ-jI-pFk"/>
                         <outlet property="price" destination="H4Q-rn-d73" id="Jpu-Bj-nbL"/>
                         <outlet property="startDatePicker" destination="0Ku-zl-wd7" id="8z4-sC-R0Q"/>
